@@ -29,7 +29,7 @@
 #  see https://www.gnu.org/licenses/.
 
 
-INCLUDES = -D__GMP_WITHIN_GMP -I$(top_srcdir)
+AM_CPPFLAGS = -D__GMP_WITHIN_GMP -I$(top_srcdir)
 
 noinst_LTLIBRARIES = libmpq.la
 libmpq_la_SOURCES =							\
